feat: add impact fields to surplus posts and enhance expiry suggestion logic
- Added new columns for impact metrics in surplus_posts table to track CO2e, water usage, and impact factors.
- Introduced fields for user-provided expiry dates and suggestions in surplus_posts.
- Implemented validation tests for CreateSurplusRequest to ensure unique dietary tags and valid food types.
- Developed ExpirySuggestionService tests to validate expiry date calculations based on food type and temperature.
- Created FoodTypeImpactService tests to verify impact computation based on food type factors.
- Enhanced ImpactMetricsEngine tests to ensure accurate donation impact metrics and delta calculations.
- Implemented SurplusExpiryLogic tests to validate expiry date handling and filtering logic.
- Added integration tests for SurplusImpactComputation to ensure impact snapshots are computed and persisted correctly.
- Developed tests for SurplusPostScheduler to validate expiry notification logic and deduplication.
- Created frontend utility functions and tests for computing suggested expiry dates based on food type and temperature.